添加支付模块